force-app/main/default/objects/Medico__c/Medico__c.object-meta.xml
<CustomObject>
    <description>Objeto utilizado para registrar y administrar detalles específicos relacionados con médicos que trabajan en los centros estéticos</description>
    <label>Médico</label>
    <nameField>
        <label>Nombre del Médico</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Médicos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>