force-app/main/default/objects/Medico__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Dirección de correo electrónico del médico.</description>
    <label>Correo Electrónico</label>
    <type>Email</type>
</CustomField>