force-app/main/default/objects/Medico__c/fields/Especialidades__c.field-meta.xml
<CustomField>
    <fullName>Especialidades__c</fullName>
    <description>Especialidades médicas del doctor</description>
    <label>Especialidades</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Especialidad</valueSetName>
    </valueSet>
</CustomField>