force-app/main/default/objects/Medico__c/fields/Numero_de_Licencia_Medica__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Licencia_Medica__c</fullName>
    <description>Número de licencia o identificación profesional del médico</description>
    <label>Número de Licencia Médica</label>
    <length>20</length>
    <type>Text</type>
</CustomField>